--- a/src/components/body/skills/skills.css
+++ b/src/components/body/skills/skills.css
@@ -8,6 +8,7 @@
 .skills-section {
     display: flex;
     justify-content: space-between;
+    z-index: 2;
 }
 .skills-section-title  {
     font-size: 24px;
@@ -17,7 +18,7 @@
 .img{
     position: absolute;
     width: 80%;
-    z-index: 1;
+    z-index: 0;
     opacity: 0.2;
 }
 
