--- a/src/components/dog/dog.css
+++ b/src/components/dog/dog.css
@@ -7,6 +7,7 @@
     filter: drop-shadow(0 0 7px rgba(253, 254, 255, 0.813));
     width: fit-content;
     cursor :pointer;
+    z-index: 2;
 }
 #canvas1:hover {
     transform: scale(1.1);
@@ -46,6 +47,7 @@
     display: flex;
     flex-flow: column;
     width: fit-content;
+    z-index: 3;
 }
 .controls div{
     margin-bottom: 1rem;
